# ft_kalman

./: .gitignore  Cargo.toml  Makefile  README.md  implot3d_demo.ini  test.sh
src/: client.rs  error.rs  gui.rs  kalman.rs  kalman_view.rs  lib.rs  log.rs  main.rs  message.rs  orchestrator.rs  plot_data.rs  types.rs
