[package]
name = "kalman"
version = "0.1.0"
edition = "2024"


[dependencies]
thiserror = "2.0.16"
nalgebra = "0.34.0"
clap = { version = "4.5.53", features = ["derive"] }
dear-imgui-rs = "0.7.1"
dear-app = "0.7.0"
dear-implot = { version = "0.7.0", optional = true }

dear-implot3d = { version = "0.7.0", optional = true }
wgpu = "*"

color-print = "0.3.7"

[features]
default = ["implot", "implot3d"]
implot3d = ["dep:dear-implot3d", "dear-app/implot3d"]
implot = ["dep:dear-implot", "dear-app/implot"]


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
